# project-ml

./: Dockerfile  README.md  constants.py  docker-compose.yml  package-lock.json  pyproject.toml
data/: motions.csv  mpps.csv  personas.csv  requirements.txt  webscrape_ontario.ipynb
data/personas/: generate_personas.py  prompts.py
frontend/mpp-arena/: package-lock.json  package.json  tailwind.config.js
frontend/mpp-arena/src/app/: globals.css  layout.js
frontend/mpp-arena/src/app/chat/: page.js
frontend/mpp-arena/src/app/chat/components/: chat_bubble.js  chat_header.js  send_button.js  text_box.js
frontend/mpp-arena/src/app/choose/: page.js
frontend/mpp-arena/src/app/choose/components/: avatar_big.js  button_big.js  dropdown.js  text_box.js
frontend/mpp-arena/src/context/: GlobalContext.js
scripts/: precommit.sh  run_docker.sh  setup_env.sh
src/app/: main.py
src/core/: api.py  debate.py  main.py  mpps.csv  persona.py  traits.py
src/core/ai/: agent.py  constants.py  generate_personas.py  model.py  persona.py  personas_full.json  traits.py
src/core/db/: db.py
src/database/: personas.json  test.json
src/db/: __init__.py  db_ops.py
webscrape/: bills.csv  motions.csv  ontario_mpp_v1.csv  ontario_mpp_v2.csv  webscrape_ontario.ipynb
